unpackaged/objects/copado__Deployment_History__c.object
<CustomObject>
	<fields>
		<fullName>copado__Date__c</fullName>
		<label>Date</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>copado__Deployment_Id__c</fullName>
		<inlineHelpText>In case of Deployment being deleted. Deployment Id will be kept in this field.</inlineHelpText>
		<label>Deployment Id</label>
		<length>20</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Deployment__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Deployment</label>
		<referenceTo>copado__Deployment__c</referenceTo>
		<relationshipLabel>Copado Deployment History</relationshipLabel>
		<relationshipName>Copado_Deployment_History</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Event__c</fullName>
		<label>Event</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Created</fullName>
				</value>
				<value>
					<fullName>Updated</fullName>
				</value>
				<value>
					<fullName>Deleted</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Field__c</fullName>
		<label>Field</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__New_Value__c</fullName>
		<label>New Value</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Object__c</fullName>
		<label>Object</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Deployment</fullName>
				</value>
				<value>
					<fullName>Step</fullName>
				</value>
				<value>
					<fullName>Destination Org</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Old_Value__c</fullName>
		<label>Old Value</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__User__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>User</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Copado_Deployment_History</relationshipName>
		<type>Lookup</type>
	</fields>
	<label>Copado Deployment History</label>
	<nameField>
		<displayFormat>CDH-{0000000}</displayFormat>
		<label>Copado Deployment History Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Copado Deployment History</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>